--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,7 @@
 #   \/___/ \/__/\/_/\/_/\/_/\/_/\/___/ \/____/\/____/\/___/ \/____/ by samuelololol@gmail.com
 #                                                                                                            
 # shell setting
-set-option -g default-shell /bin/zsh
+# set-option -g default-shell /bin/zsh
 
 # General Setting
 set-option -g prefix C-a
@@ -90,10 +90,10 @@ bind Space choose-buffer
 
 
 # mouse
-set -g mouse-select-pane on
-set -g mouse-select-window on
-set -g mode-mouse on
-set -g mouse-resize-pane on
+# set -g mouse-select-pane on
+# set -g mouse-select-window on
+# set -g mode-mouse on
+# set -g mouse-resize-pane on
 
 #Some consoles really really don't like attempts to set the window title. Tell
 #tmux not to do this by turning off the "set-titles" option (you can do this
@@ -102,4 +102,4 @@ set -g set-titles off
 #set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program 
 
 
-bind-key j command-prompt -p "join pane from:" "join-pane -s !"
+#bind-key j command-prompt -p "join pane from:" "join-pane -s !"
